fixed layout issue for preview quiz + narrow screen

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Box3.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Box3.css
@@ -1789,7 +1789,7 @@
   }
 }
 .boxManage {
-  padding: 2px 0px 20px;
+  padding: 2px 0 20px;
   font-size: 15px;
 }
 .boxManage .btn1 {
